--- a/Sunduk.PWA/Components/CAM/ToolTableTools/Milling/MillingChamferToolsComponent.razor
+++ b/Sunduk.PWA/Components/CAM/ToolTableTools/Milling/MillingChamferToolsComponent.razor
@@ -18,10 +18,10 @@
         <MudTh Style="text-align:center"/>
     </HeaderContent>
     <RowTemplate>
-        <MudTd DataLabel="Позиция">@context.Position</MudTd>
-        <MudTd DataLabel="Диаметр">@context.Diameter.ToPrettyString()</MudTd>
-        <MudTd DataLabel="Угол">@context.Angle.ToPrettyString()</MudTd>
-        <MudTd DataLabel="Компенсация кончика">@context.TipCompensation.ToPrettyString()</MudTd>
+        <MudTd DataLabel="Позиция">T@(context.Position)</MudTd>
+        <MudTd DataLabel="Диаметр">Ø@(context.Diameter.ToPrettyString(stringOption: Util.PrettyStringOption.AsIs))</MudTd>
+        <MudTd DataLabel="Угол">@(context.Angle.ToPrettyString())°</MudTd>
+        <MudTd DataLabel="Компенсация кончика">@(context.TipCompensation > 0 ? context.TipCompensation.ToPrettyString() + "мм" : string.Empty)</MudTd>
         <MudTd DataLabel="Исполнение">@(context.Hand == Tool.ToolHand.Right ? "Правое" : "Левое")</MudTd>
         <MudTd DataLabel="" Style="text-align:right">
             <MudIconButton Class="ma-n3" Variant="Variant.Text" Icon="@Icons.Material.Outlined.RemoveCircleOutline"
@@ -30,24 +30,27 @@
     </RowTemplate>
     <RowEditingTemplate>
         <MudTd DataLabel="Позиция">
-            <MudTextField Class="my-n2" @bind-Value="@context.Position" Variant="Variant.Outlined" Margin="Margin.Dense" Required />
+            <MudTextField Class="my-n2" @bind-Value="@context.Position" Adornment="Adornment.Start" AdornmentText="T" Variant="Variant.Outlined" Margin="Margin.Dense" Required />
         </MudTd>
         <MudTd DataLabel="Диаметр" Class="my-n2">
-            <MudTextField Class="my-n2" @bind-Value="@context.Diameter" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
+            <MudTextField Class="my-n2" @bind-Value="@context.Diameter" Adornment="Adornment.Start" AdornmentText="Ø" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
         </MudTd>
         <MudTd DataLabel="Угол" Class="my-n2">
             @*<MudAutocomplete T="double" Label="Угол" @bind-Value="@context.Angle" SearchFunc="@SearchAsync" CoerceText="true" CoerceValue="true" 
                 Converter="Util.DoubleConverter" Required Variant="Variant.Outlined" Margin="Margin.Dense" />*@
-            <MudTextField Class="my-n2" @bind-Value="@context.Angle" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.HalfAngleDoubleConverter" Required />
+            <MudTextField Class="my-n2" @bind-Value="@context.Angle" Adornment="Adornment.End" AdornmentText="°" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.HalfAngleDoubleConverter" Required />
         </MudTd>
         <MudTd DataLabel="Компенсация кончика" Class="my-n2">
-            <MudTextField Class="my-n2" @bind-Value="@context.TipCompensation" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
+            <MudTextField Class="my-n2" @bind-Value="@context.TipCompensation" Adornment="Adornment.End" AdornmentText="мм" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
         </MudTd>
         <MudTd DataLabel="Исполнение" Class="my-n2">
             <MudSelect Class="my-n2" T="Tool.ToolHand" @bind-Value="@context.Hand" Variant="Variant.Outlined" Margin="Margin.Dense" Required>
                 <MudSelectItem Value="@Tool.ToolHand.Right">Правое</MudSelectItem>
                 <MudSelectItem Value="@Tool.ToolHand.Left">Левое</MudSelectItem>
             </MudSelect>
+        </MudTd>
+        <MudTd>
+            
         </MudTd>
     </RowEditingTemplate>
 </MudTable>
@@ -60,8 +63,15 @@
     [Parameter] 
     public EventCallback<List<Tool>> ToolsChanged { get; set; }
 
-    [Parameter]
-    public List<MillingChamferTool> MillingChamferTools { get; set; }
+    public List<MillingChamferTool> MillingChamferTools
+    {
+        get => Tools.OfType<MillingChamferTool>().ToList();
+        set
+        {
+            Tools.RemoveAll(x => x is MillingChamferTool);
+            Tools.AddRange(value);
+        }
+    }
 
     [Parameter]
     public bool ReadOnly { get; set; }
