--- a/Sunduk.PWA/Components/CAM/ToolTableTools/Milling/MillingSpecialToolsComponent.razor
+++ b/Sunduk.PWA/Components/CAM/ToolTableTools/Milling/MillingSpecialToolsComponent.razor
@@ -7,7 +7,7 @@
         <MudTh/>
     </HeaderContent>
     <RowTemplate>
-        <MudTd DataLabel="Позиция">@context.Position</MudTd>
+        <MudTd DataLabel="Позиция">T@(context.Position)</MudTd>
         <MudTd DataLabel="Описание">@context.Name</MudTd>
         <MudTd>
             <MudIconButton Class="ma-n3" Variant="Variant.Text" Icon="@Icons.Material.Outlined.RemoveCircleOutline" OnClick="(() => RemoveMillingSpecialTool(context))" />
@@ -15,7 +15,7 @@
     </RowTemplate>
     <RowEditingTemplate>
         <MudTd DataLabel="Позиция">
-            <MudTextField @bind-Value="@context.Position" Variant="Variant.Outlined" Margin="Margin.Dense" Required />
+            <MudTextField @bind-Value="@context.Position" Adornment="Adornment.Start" AdornmentText="T" Variant="Variant.Outlined" Margin="Margin.Dense" Required />
         </MudTd>
         <MudTd DataLabel="Описание">
             <MudTextField @bind-Value="@context.Name" Variant="Variant.Outlined" Margin="Margin.Dense" />
@@ -31,8 +31,15 @@
     [Parameter] 
     public EventCallback<List<Tool>> ToolsChanged { get; set; }
 
-    [Parameter]
-    public List<MillingSpecialTool> MillingSpecialTools { get; set; }
+    public List<MillingSpecialTool> MillingSpecialTools
+    {
+        get => Tools.OfType<MillingSpecialTool>().ToList();
+        set
+        {
+            Tools.RemoveAll(x => x is MillingSpecialTool);
+            Tools.AddRange(value);
+        }
+    }
 
     [Parameter]
     public bool ReadOnly { get; set; }
