--- a/Sunduk.PWA/Components/CAM/ToolTableTools/Milling/MillingThreadCuttingToolsComponent.razor
+++ b/Sunduk.PWA/Components/CAM/ToolTableTools/Milling/MillingThreadCuttingToolsComponent.razor
@@ -10,7 +10,7 @@
         <MudTh/>
     </HeaderContent>
     <RowTemplate>
-        <MudTd DataLabel="Позиция">@context.Position</MudTd>
+        <MudTd DataLabel="Позиция">T@(context.Position)</MudTd>
         @switch (@context.ThreadStandart)
         {
             case ThreadStandart.Metric:
@@ -26,8 +26,8 @@
                 <MudTd DataLabel="Стандарт">Коническая 60° (K)</MudTd>
                 break;
         }
-        <MudTd DataLabel="Диаметр">@context.Diameter.ToPrettyString()</MudTd>
-        <MudTd DataLabel="Шаг">@context.Pitch.ToPrettyString()</MudTd>
+        <MudTd DataLabel="Диаметр">Ø@(context.Diameter.ToPrettyString(stringOption: Util.PrettyStringOption.AsIs))</MudTd>
+        <MudTd DataLabel="Шаг">@(context.Pitch.ToPrettyString(stringOption: Util.PrettyStringOption.AsIs))мм</MudTd>
         <MudTd DataLabel="Исполнение">@(context.Hand == Tool.ToolHand.Right ? "Правое" : "Левое")</MudTd>
         <MudTd>
             <MudIconButton Class="ma-n3" Variant="Variant.Text" Icon="@Icons.Material.Outlined.RemoveCircleOutline" OnClick="(() => RemoveMillingThreadCuttingTool(context))" />
@@ -35,7 +35,7 @@
     </RowTemplate>
     <RowEditingTemplate>
         <MudTd DataLabel="Позиция">
-            <MudTextField @bind-Value="@context.Position" Variant="Variant.Outlined" Margin="Margin.Dense" Required />
+            <MudTextField @bind-Value="@context.Position" Adornment="Adornment.Start" AdornmentText="T" Variant="Variant.Outlined" Margin="Margin.Dense" Required />
         </MudTd>
         <MudTd DataLabel="Стандарт">
             <MudSelect T="ThreadStandart" @bind-Value="@context.ThreadStandart" Variant="Variant.Outlined" Required>
@@ -46,10 +46,10 @@
             </MudSelect>
         </MudTd>
         <MudTd DataLabel="Диаметр">
-            <MudTextField @bind-Value="@context.Diameter" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
+            <MudTextField @bind-Value="@context.Diameter" Adornment="Adornment.Start" AdornmentText="Ø" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
         </MudTd>
         <MudTd DataLabel="Шаг">
-            <MudTextField @bind-Value="@context.Pitch" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
+            <MudTextField @bind-Value="@context.Pitch" Adornment="Adornment.End" AdornmentText="мм" Variant="Variant.Outlined" Margin="Margin.Dense" Converter="Util.DoubleConverter" Required />
         </MudTd>
         <MudTd DataLabel="Исполнение">
             <MudSelect T="Tool.ToolHand" @bind-Value="@context.Hand" Variant="Variant.Outlined" Required>
@@ -62,14 +62,24 @@
 <AddToolButton OnClick="AddMillingThreadCuttingTool" />
 
 @code {
+    /// <summary>
+    /// TODO сделать обозначения для разных стандартов в tool.Description() или в самом классе
+    /// </summary>
     [Parameter]
     public List<Tool> Tools { get; set; }
 
     [Parameter] 
     public EventCallback<List<Tool>> ToolsChanged { get; set; }
 
-    [Parameter]
-    public List<MillingThreadCuttingTool> MillingThreadCuttingTools { get; set; }
+    public List<MillingThreadCuttingTool> MillingThreadCuttingTools
+    {
+        get => Tools.OfType<MillingThreadCuttingTool>().ToList();
+        set
+        {
+            Tools.RemoveAll(x => x is MillingThreadCuttingTool);
+            Tools.AddRange(value);
+        }
+    }
 
     [Parameter]
     public bool ReadOnly { get; set; }
